--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,7 +6,12 @@ product_list:
     defaults:   { _controller: AppBundle:Product:list }
 product_create:
     path:       /product/create
-    defaults:   { _controller: AppBundle:Product:create }    
+    defaults:   { _controller: AppBundle:Product:create }
+product_update:
+    path:       /product/update/{id}
+    defaults:   { _controller: AppBundle:Product:update } 
+    requirements:
+        id:         '\d+'
 product_show:
     path:       /product/{name}
     defaults:   { _controller: AppBundle:Product:show } 
