--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+app_user:
+    resource: "@AppBundle/Controller/UserController.php"
+    type:     annotation
+
 homepage:
     path:       /
     defaults:   { _controller: AppBundle:Product:homepage }    
